Modifying the Project